--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ tqdm>=4.48.0
 scikit-learn>=0.24.2
 python-dotenv>=0.15.0
 chromadb<=0.5.0
+tqdm>=4.66.5
+numpy<=1.24.4
+konlpy>=0.6.0
+tiktoken<=0.8.0
